@@ -160,6 +160,7 @@ enum pic_processor {
   pic16f54,
   pic16f57,
   pic16f59,
+  pic16f610,
   pic16f627,
   pic16f627a,
   pic16f628,
@@ -203,6 +204,11 @@ enum pic_processor {
   pic16f877,
   pic16f877a,
   pic16f88,
+  pic16f882,
+  pic16f883,
+  pic16f884,
+  pic16f886,
+  pic16f887,
   pic16f913,
   pic16f914,
   pic16f916,
@@ -231,6 +237,8 @@ enum pic_processor {
   pic18c858,
   pic18f1220,
   pic18f1320,
+  pic18f1230,
+  pic18f1330,
   pic18f2220,
   pic18f2320,
   pic18f2331,
@@ -242,6 +250,7 @@ enum pic_processor {
   pic18f2455,
   pic18f248,
   pic18f2480,
+  pic18f24j10,
   pic18f2510,
   pic18f2515,
   pic18f252,
@@ -252,6 +261,7 @@ enum pic_processor {
   pic18f258,
   pic18f2580,
   pic18f2585,
+  pic18f25j10,
   pic18f2610,
   pic18f2620,
   pic18f2680,
@@ -267,6 +277,7 @@ enum pic_processor {
   pic18f4455,
   pic18f448,
   pic18f4480,
+  pic18f44j10,
   pic18f4510,
   pic18f4515,
   pic18f452,
@@ -277,6 +288,7 @@ enum pic_processor {
   pic18f458,
   pic18f4580,
   pic18f4585,
+  pic18f45j10,
   pic18f4610,
   pic18f4620,
   pic18f4680,
